--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ pnpm-lock.yaml
 
 # Symlinks to cache
 opencode-codebase-index
+
+# Local index data
+.opencode/
+
+# Test files
+test-*.cjs
+test-*.mjs
