feat: add slash commands for search, index, and hybrid find

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "files": [
     "dist",
     "native/*.node",
-    "skill"
+    "skill",
+    "commands"
   ],
   "napi": {
     "name": "codebase-index-native",
