--- a/package.json
+++ b/package.json
@@ -60,21 +60,23 @@
     }
   },
   "dependencies": {
-    "chokidar": "^3.6.0",
-    "ignore": "^5.3.1",
-    "p-queue": "^8.0.1",
-    "p-retry": "^6.2.0",
+    "chokidar": "^5.0.0",
+    "ignore": "^7.0.5",
+    "p-queue": "^9.1.0",
+    "p-retry": "^7.1.1",
     "tiktoken": "^1.0.15",
-    "zod": "^3.23.8"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@napi-rs/cli": "^2.18.4",
-    "@opencode-ai/plugin": "^1.1.17",
-    "@types/node": "^20.14.0",
+    "@eslint/js": "^9.39.2",
+    "@napi-rs/cli": "^3.5.1",
+    "@opencode-ai/plugin": "^1.1.20",
+    "@types/node": "^25.0.8",
     "eslint": "^9.0.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.0",
-    "vitest": "^1.6.0"
+    "typescript-eslint": "^8.53.0",
+    "vitest": "^4.0.17"
   },
   "peerDependencies": {
     "@opencode-ai/plugin": "^1.0.0"
