fix: update napi config and workflows for OIDC trusted publishing
- Fix native/package.json to use binaryName and targets (napi v3 format)
- Add id-token: write permission for npm OIDC authentication
- Add --provenance flag for supply chain security
- Remove NPM_TOKEN dependency, use trusted publishers instead
- Add cross-compilation linker for ARM64 Linux builds
- Update to Node.js 22

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
 
       - name: Setup Rust
@@ -25,7 +25,10 @@ jobs:
         run: npm ci
 
       - name: Build native module
-        run: npm run build:native
+        working-directory: native
+        run: |
+          cargo build --release
+          npx napi build --release --platform
 
       - name: Build TypeScript
         run: npm run build:ts
@@ -44,7 +47,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
