fix: only export default plugin to prevent OpenCode loader crash
OpenCode's plugin loader iterates over ALL exports and tries to call
each as a function. Non-function exports (Zod schemas, classes, config
objects) cause 'fn3 is not a function' error.

Changes:
- Remove all named exports from main entry point
- Replace zod schemas with plain TypeScript interfaces
- Use tool.schema (zod from SDK) for tool arg validation
- Remove zod devDependency (now uses SDK's zod)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opencode-codebase-index",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Semantic codebase indexing and search for OpenCode - find code by meaning, not just keywords",
   "type": "module",
   "main": "dist/index.js",
@@ -74,8 +74,7 @@
     "tsup": "^8.1.0",
     "typescript": "^5.5.0",
     "typescript-eslint": "^8.53.0",
-    "vitest": "^4.0.17",
-    "zod": "^3.24.0"
+    "vitest": "^4.0.17"
   },
   "peerDependencies": {
     "@opencode-ai/plugin": "^1.0.0"
