feat: branch-aware indexing with SQLite storage
- Add SQLite database for storing embeddings and chunks by content hash
- Embeddings are deduplicated across branches - switching branches reuses existing embeddings
- Search results are filtered to only include chunks on current branch
- Auto-migrate legacy indexes on first run
- Add git branch detection and HEAD watcher for automatic re-indexing on branch switch
- Fix glob pattern to match root-level files (e.g., **/*.js now matches file.js)
- Add health check garbage collection for orphaned embeddings and chunks
- Fix lint errors: replace require() with ES imports
- Update README with accurate Quick Start instructions

Storage structure:
  .opencode/index/
  ├── codebase.db           # SQLite: embeddings, chunks, branch catalog
  ├── vectors.usearch       # Vector index (uSearch)
  ├── inverted-index.json   # BM25 keyword index
  └── file-hashes.json      # File change detection

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -22,6 +22,8 @@ tree-sitter-json = "0.20"
 
 usearch = "2.15"
 
+rusqlite = { version = "0.31", features = ["bundled"] }
+
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 
 serde = { version = "1.0", features = ["derive"] }
