--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -12,13 +12,19 @@ crate-type = ["cdylib"]
 napi = { version = "2.16", default-features = false, features = ["napi9", "async", "serde-json"] }
 napi-derive = "2.16"
 
-tree-sitter = "0.20"
-tree-sitter-typescript = "0.20"
-tree-sitter-javascript = "0.20"
-tree-sitter-python = "0.20"
-tree-sitter-rust = "0.20"
-tree-sitter-go = "0.20"
-tree-sitter-json = "0.20"
+tree-sitter = "0.24"
+tree-sitter-typescript = "0.23"
+tree-sitter-javascript = "0.23"
+tree-sitter-python = "0.23"
+tree-sitter-rust = "0.23"
+tree-sitter-go = "0.23"
+tree-sitter-json = "0.24"
+tree-sitter-java = "0.23"
+tree-sitter-c-sharp = "0.23"
+tree-sitter-ruby = "0.23"
+tree-sitter-bash = "0.23"
+tree-sitter-c = "0.23"
+tree-sitter-cpp = "0.23"
 
 usearch = "2.23"
 
