--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -25,6 +25,9 @@ tree-sitter-ruby = "0.23"
 tree-sitter-bash = "0.23"
 tree-sitter-c = "0.23"
 tree-sitter-cpp = "0.23"
+tree-sitter-toml-ng = "0.7"
+tree-sitter-yaml = "0.7"
+tree-sitter-language = "0.1"
 
 usearch = "2.23"
 
