--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
       "require": "./dist/index.cjs"
     }
   },
+  "bin": {
+    "opencode-codebase-index-mcp": "dist/cli.js"
+  },
   "license": "MIT",
   "author": "Kenneth",
   "repository": {
@@ -68,6 +71,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "@napi-rs/cli": "^3.5.1",
     "@opencode-ai/plugin": "^1.1.21",
     "@types/node": "^25.0.8",
@@ -76,9 +80,24 @@
     "tsup": "^8.1.0",
     "typescript": "^5.5.0",
     "typescript-eslint": "^8.53.0",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.17",
+    "zod": "^3.25.67"
   },
   "peerDependencies": {
-    "@opencode-ai/plugin": "^1.0.0"
+    "@modelcontextprotocol/sdk": "^1.12.1",
+    "@opencode-ai/plugin": "^1.0.0",
+    "zod": "^3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@modelcontextprotocol/sdk": {
+      "optional": true
+    },
+    "@opencode-ai/plugin": {
+      "optional": true
+    },
+    "zod": {
+      "optional": true
+    }
   }
+
 }
