--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -28,23 +28,21 @@ tree-sitter-cpp = "0.23"
 tree-sitter-toml-ng = "0.7"
 tree-sitter-yaml = "0.7"
 tree-sitter-language = "0.1"
-
-usearch = "2.23"
-
 rusqlite = { version = "0.31", features = ["bundled"] }
-
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
-
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
 rayon = "1.10"
-
 walkdir = "2.5"
 ignore = "0.4"
-
 thiserror = "1.0"
 anyhow = "1.0"
+# On Linux/macOS: use default features (simsimd + fp16lib) for SIMD-accelerated vector ops
+# On Windows: disable simsimd — MSVC lacks _mm512_reduce_add_ph intrinsic (usearch#325)
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+usearch = "2.23"
+[target.'cfg(target_os = "windows")'.dependencies]
+usearch = { version = "2.23", default-features = false, features = ["fp16lib"] }
 
 [build-dependencies]
 napi-build = "2.1"
