fix: pin usearch to 2.23.0 and commit Cargo.lock for reproducible builds
usearch 2.24.0 introduced a MAP_FAILED regression on Windows MSVC
(POSIX-only identifier in index_plugins.hpp). Pin to =2.23.0 which
builds cleanly with our simsimd-disabled config.

Also commit Cargo.lock (previously gitignored) to ensure CI resolves
the same dependency versions as local development.

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -40,9 +40,9 @@ anyhow = "1.0"
 # On Linux/macOS: use default features (simsimd + fp16lib) for SIMD-accelerated vector ops
 # On Windows: disable simsimd — MSVC lacks _mm512_reduce_add_ph intrinsic (usearch#325)
 [target.'cfg(not(target_os = "windows"))'.dependencies]
-usearch = "2.23"
+usearch = "=2.23.0"
 [target.'cfg(target_os = "windows")'.dependencies]
-usearch = { version = "2.23", default-features = false, features = ["fp16lib"] }
+usearch = { version = "=2.23.0", default-features = false, features = ["fp16lib"] }
 
 [build-dependencies]
 napi-build = "2.1"
