feat: add call graph extraction and query support
Implement full-stack call graph feature: Rust-based extraction of
function calls, method calls, constructors, and imports across 5
languages (TS/JS, Python, Go, Rust), with SQLite storage, NAPI
bindings, indexer integration, OpenCode tool, and MCP server support.

Rust layer:
- Add call_extractor.rs with tree-sitter queries for 5 languages
- Add Language::from_string() to types.rs
- DB schema v2: symbols, call_edges, branch_symbols tables
- Full CRUD + GC for symbols and call edges
- 47 Rust tests pass, zero warnings

TypeScript layer:
- NAPI bindings for extractCalls + 16 Database methods
- Indexer integration: extract calls during indexing, branch awareness
- call_graph tool (callers/callees queries)
- MCP server call_graph tool + health check updates
- 352 tests pass, zero type errors

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -37,6 +37,7 @@ walkdir = "2.5"
 ignore = "0.4"
 thiserror = "1.0"
 anyhow = "1.0"
+streaming-iterator = "0.1"
 # On Linux/macOS: use default features (simsimd + fp16lib) for SIMD-accelerated vector ops
 # On Windows: disable simsimd — MSVC lacks _mm512_reduce_add_ph intrinsic (usearch#325)
 [target.'cfg(not(target_os = "windows"))'.dependencies]
